<resources>
    <string name="app_name">Musical Structure</string>
    <string name="cover_album">cover album</string>
    <string name="previous_img">previous img</string>
    <string name="play_pause_img">play pause img</string>
    <string name="next_img">next img</string>
    <string name="more">More</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="playlist">PlayList:</string>
    <string name="playlist_example_name">PlayList: Awesome Songs!</string>
    <string name="search">Search</string>
    <string name="lorem_ipsum">A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don\'t know who you\'re talking to, so let me clue you in. I am not in danger, Skyler. I AM the danger! A guy opens his door and gets shot and you think that of me? No. I am the one who knocks!</string>
    <string name="img_like">img like</string>
    <string name="followers">Followers</string>
    <string name="numberFollowers">132K</string>
    <string name="img_item_album">img album item</string>
    <string name="transitionImgArtist">imgArtist</string>
    <string name="img_artist_detail_header">img artist detail header</string>
    <string name="artist_detail_explain">in this activity you can see information of an artist like it name, a biography and albums from it, also you can \"follow\" this artist and add in favorites, I gona get all the information from lastfm and musixmatch API</string>
    <string name="album_list_explain">In this activity you can see all your saved albums. Using realm I will get the saved information of each album obtained by the musixmatch and lastfm API</string>
    <string name="artist_list_explain">In this activity you can see all your saved \"follow\" artists</string>
    <string name="songs_list_explain">In this activity you can see all your saved songs</string>
    <string name="library_list_explain">In this activity you can see the current playlist and you can go to artist, albums or songs list, I'll use Realm to storage the name of playlist, songs and ID's of these</string>
    <string name="player_explain">this view is for controlling the music player using MediaPlayer and Audio Player</string>
    <string name="replay_button">Replay button</string>
    <string name="suffle_button">suffle button</string>
</resources>
