<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artist_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gorrotowi.musicalstructure.ArtistDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="266dp">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            app:diagonal_angle="10"
            app:diagonal_gravity="left">

            <ImageView
                android:id="@+id/imgArtistDetailHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placebotop"
                android:transitionName="@string/transitionImgArtist"
                android:contentDescription="@string/img_artist_detail_header" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cover_gradient_artist" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numberFollowers"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/circular_shape"
            android:contentDescription="@string/img_like"
            android:padding="10dp"
            app:srcCompat="@drawable/heart" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcArtistAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin" />

</LinearLayout>
