<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gorrotowi.musicalstructure.ListLibraryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLibraryArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_bottom_stroke"
            android:drawableLeft="@drawable/account_multiple"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/account_multiple"
            android:gravity="center_vertical|start"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/artists"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLibraryAlbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_bottom_stroke"
            android:drawableLeft="@drawable/view_grid"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/view_grid"
            android:gravity="center_vertical|start"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/albums"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLibrarySongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_bottom_stroke"
            android:drawableLeft="@drawable/album"
            android:drawablePadding="32dp"
            android:drawableStart="@drawable/album"
            android:gravity="center_vertical|start"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/songs"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlist"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/playlist_example_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
